--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@
 .not_ready {   
   background-color: red; 
 } 
+
 .terminating {   
   background-color: red; 
+}
+
+.pending {   
+  background-color:yellow; 
 }
