--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 }
 
 #main {
-  margin-top: 0;
+  margin-top: 20%;
   width: auto;
   height: 100%;
   max-width: none;
@@ -74,7 +74,7 @@
   position: absolute;     
   left: 0;     
   right: 0;     
-  top: 50px;     
+  top: 20%;     
   height: 150px;     
   background-color: light-grey;     
   border-bottom: thick solid black; 
