--- a/style.css
+++ b/style.css
@@ -57,6 +57,14 @@
   margin-bottom: 0;
 }
 
+#main {
+  margin-top: 150px;
+  width: auto;
+  height: 100%;
+  max-width: none;
+  max-height: none;
+}
+
 .window {   
   line-height: 1em;   
   display: table; 
@@ -66,7 +74,7 @@
   position: absolute;     
   left: 0;     
   right: 0;     
-  top: 20%;     
+  top: 0;     
   height: 150px;     
   background-color: light-grey;     
   border-bottom: thick solid black; 
